# cppgl

./: CMakeLists.txt  README.md  run.bat
include/glad/: glad.h
res/: fragment.glsl  vertex.glsl
src/: glad.c  main.cpp  main1.cpp
src/app/: App.cpp  App.h
src/camera/: Camera.cpp  Camera.h
src/event/: event.h
src/loader/: Loader.cpp  Loader.h  ObjLoader.cpp  ObjLoader.h
src/model/: RawModel.cpp  RawModel.h
src/renderer/: Renderer.cpp  Renderer.h
src/scene/: Scene.cpp  Scene.h
src/shader/: Shader.cpp  Shader.h
src/window/: Window.cpp  Window.h
